--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-MONGO_URL=
-JWT_SEED=Esta_es_la_key_Secret
+MONGO_URL=mongodb://localhost:27017/red-social-db
+JWT_SEED=EI$$OERIOEFMDF@EFEF!45667ED%SFE
